--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,14 +1,27 @@
-<h2>Let's add new products!</h2>
+<% if @product.errors.any? %>
+<div id= "error_explanation">
+<h2><%= pluralize(@product.errors.count,"error")%>  prohibited this user from being saved: </h2>
+<ul>
+	<% @product.errors.full_messages.each do |msg| %>
+	<li><%= msg %> </li>
+	<% end %>
+</ul>
+</div>
+<% end %>
 
-<form method='post' action='/products' >
-  <label>Name of your product</label><br>
-  <input name="product[name]" size="30" type="text">
+<%= form_for(@product) do |f| %>
+<div class="field">
+<%= f.label :name %><br />
+<%= f.text_field :name %>
+</div>
 
-  <br />
-  <label>Price</label><br>
-  <input name="product[price]" type="number">
+<div class="field">
+<%= f.label :price %><br />
+<%= f.text_field :price %>
+</div>
 
-  <br />
-  <input type="submit" value="Create Product">
-</form>
+<div class="actions"><br />
+<%= f.submit %>
+</div>
 
+<% end %>
